<resources>
    <string name="app_name">Trisquel</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="action_pin_current_filter">Pin current filter</string>
    <string name="action_unpin_current_filter">Unpin current filter</string>
    <string name="action_releasenotes">Release notes</string>
    <string name="title_activity_spec_editor">SpecEditorActivity</string>
    <string name="title_activity_camera_spec_editor">CameraSpecEditorActivity</string>
    <string name="title_activity_main">Trisquel</string>
    <string name="title_activity_cam_list">Camera list</string>
    <string name="title_activity_lens_list">Lens list</string>
    <string name="title_activity_filmroll_list">Film roll list</string>
    <string name="title_activity_archive">Archive</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_accessory_list">Accessory list</string>
    <string name="title_activity_reg_cam">Register Camera</string>
    <string name="title_activity_reg_lens">Register Lens</string>
    <string name="title_activity_reg_cam_and_lens">Register Camera and Lens</string>
    <string name="title_activity_reg_filmroll">Add Filmroll</string>
    <string name="title_activity_edit_cam">Edit Camera</string>
    <string name="title_activity_edit_cam_and_lens">Edit Camera and Lens</string>
    <string name="title_activity_edit_lens">Edit Lens</string>
    <string name="title_activity_edit_photo">Edit photo information</string>
    <string name="title_activity_add_photo">Add photo information</string>
    <string name="title_activity_edit_filmroll">Edit film information</string>
    <string name="title_activity_dirchooser">Choose directory</string>
    <string name="title_activity_add_accessory">Add Accessory</string>
    <string name="title_activity_edit_accessory">Edit Accessory</string>
    <string name="title_activity_print_preview">Print preview</string>
    <string name="menu_reg_cam">Register a camera</string>
    <string name="menu_reg_lens">Register a lens</string>
    <string name="register_ilc">Register an interchangeable-lens camera</string>
    <string name="register_flc">Register a fixed-lens camera</string>
    <string name="change">Change</string>
    <string name="prime">prime</string>
    <string name="delete">Delete</string>
    <string name="add_photo_same_index">Add a photo with the same index as this</string>
    <string name="menu_edit_film">Edit film roll</string>
    <string name="menu_save">Save</string>
    <string name="menu_copy_to_clipboard">Copy to clipboard</string>
    <string name="menu_print">Print</string>
    <string name="menu_category_gears">Gears</string>
    <string name="action_backup_sqlite">Backup db file</string>
    <string name="action_license">Licenses</string>
    <string name="title_backup">Backup</string>
    <string name="title_import">Import</string>
    <string name="description_backup">
        You can backup database file and supplemental images to SD card in preparation
        for data corruption bug or changing cell phone (currently import is not
        implemented but will be done in the future).
        Continue?
    </string>
    <string name="title_backup_mode_selection">
        Select backup mode
    </string>
    <string name="title_slim_backup">
        Slim backup
    </string>
    <string name="description_slim_backup">
        Back up the database as a zip file. Supplemental image files are excluded and only the filenames and checksums of them are recorded.
    </string>
    <string name="title_whole_backup">
        Whole backup
    </string>
    <string name="description_whole_backup">
        Back up the database and supplemental image files as a zip file. This mode spends a lot of storage capacity. Choose this mode for factory reset of this device or device transition.
    </string>
    <string name="title_backup_help">
        Read the help on importing/exporting
    </string>
    <string name="description_backup_help">
        Open a web browser to read detailed descriptions on importing/exporting.
    </string>
    <string name="title_import_mode_selection">
        Select import mode
    </string>
    <string name="title_merge_zip">
        Merge a .zip file to the database of Trisquel
    </string>
    <string name="description_merge_zip">
        Existing data in the database will be reserved.
    </string>
    <string name="title_import_zip">
        Replace the database with a .zip file
    </string>
    <string name="description_import_zip">
        WARNING: Existing data in the database will be removed!
    </string>
    <string name="title_import_db">
        Replace the database with a .db file backed up by an older version of Trisquel
    </string>
    <string name="description_import_db">
        WARNING: Existing data in the database will be removed!
    </string>
    <string name="word_select">Select</string>
    <string name="error_permission_denied_sdcard">Could not get permission to access SD card</string>
    <string name="error_permission_location">No location permissions granted</string>
    <string name="error_please_reg_cam">Register camera before creating a film roll.</string>
    <string name="error_not_sqlite3_db">Selected file is not a SQLite3 DB file.</string>
    <string name="notify_copied">Copied to clipboard</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="continue_">continue_</string>
    <string name="continue_editing">Continue editing</string>
    <string name="close">Close</string>
    <string name="show_release_notes">Show release notes</string>
    <string name="hint_zoom">Use hypen for zoom lens as "70-300"</string>
    <string name="label_index">Index</string>
    <string name="label_sort_by">Sort by</string>
    <string name="label_date">Date</string>
    <string name="label_created_date">Created date</string>
    <string name="label_aperture">Aperture</string>
    <string name="label_f_stops">F-stops</string>
    <string name="label_lens">Lens</string>
    <string name="label_lens_name">Lens name</string>
    <string name="label_shutter_speed">Shutter speed</string>
    <string name="label_shutter_speed_step">Shutter speed step</string>
    <string name="label_shutter_speed_step_one">1 step</string>
    <string name="label_shutter_speed_step_half">&#189; step</string>
    <string name="label_shutter_speed_step_one_third">&#8531; step</string>
    <string name="label_shutter_speed_step_custom">Custom&#8230;</string>
    <string name="label_shutter_speed_range">Shutter speed range</string>
    <string name="label_shutter_speed_slowest">Slowest</string>
    <string name="label_shutter_speed_fastest">Fastest</string>
    <string name="label_to">to</string>
    <string name="label_focal_length">Focal length</string>
    <string name="label_exposure_value">EV</string>
    <string name="label_exposure_compensation">Exposure compensation</string>
    <string name="label_ttl_light_meter">TTL light meter</string>
    <string name="label_step">Step</string>
    <string name="label_range">Range</string>
    <string name="label_memo">Memo</string>
    <string name="label_location">Location</string>
    <string name="label_coordinate">Coordinate</string>
    <string name="label_camera">Camera</string>
    <string name="label_manufacturer">Manufacturer</string>
    <string name="label_brand">Brand</string>
    <string name="label_iso">ISO</string>
    <string name="label_name">Name</string>
    <string name="label_mount">Mount</string>
    <string name="label_model">Model</string>
    <string name="label_format">Format</string>
    <string name="label_comma_separated">Input comma separated values</string>
    <string name="label_bulb">Bulb is available</string>
    <string name="unknown">Unknown</string>
    <string name="label_fl_factor">Focal length factor</string>
    <string name="label_accessories">Accessories</string>
    <string name="label_accessory_type">Accessory type</string>
    <string name="label_accessory_filter">Filter</string>
    <string name="label_accessory_tc">Tele converter</string>
    <string name="label_accessory_wc">Wide converter</string>
    <string name="label_accessory_ext_tube">Extension tube</string>
    <string name="label_accessory_unknown">Other</string>
    <string name="label_mount_adapter">Mount adapter</string>
    <string name="label_supplementary_images">Supplementary images</string>
    <string name="label_no_filter">No filtering</string>
    <string name="label_filter_by_camera">Filter by camera</string>
    <string name="label_filter_by_film_brand">Filter by film brand</string>
    <string name="label_filter_detail">Detailed filtering</string>
    <string name="label_add">Add</string>
    <string name="label_tags">Tags</string>
    <string name="title_dialog_search_by_tags">Search by tags</string>
    <string name="msg_error_no_tagged_items">There are no tagged photos</string>
    <string name="title_dialog_select_accessories">Select accessories</string>
    <string name="title_dialog_edit_index">Modify the index value</string>
    <string name="title_dialog_shift_index">Shift the index values</string>
    <string name="msg_dialog_shift_index">Modify the index value and shift that of the following items</string>
    <string name="hint_dialog_shift_index">Allowed value: %d or more</string>
    <string name="msg_cannot_remove_item">%s cannot be removed because it is referenced by some film rolls.</string>
    <string name="msg_confirm_remove_item">Are you sure to remove %s? This action is not undoable!</string>
    <string name="this_photo">this photo</string>
    <string name="title_dialog_custom_ss">Custom shutter speeds</string>
    <string name="msg_dialog_custom_ss">Input shutter speeds line-by-line in a format like 1/1000, 0.3 or 10</string>
    <string name="error_flfactor_toosmall">Input more than 1.0</string>
    <string name="error_flfactor_toobig">Input less than 1.0</string>
    <string name="error_ss_inconsistent">Inconsistent values</string>
    <string name="error_nolens">"%s" mount lens is not registered</string>
    <string name="error_nocamera">Any cameras are not registered</string>
    <string name="no_data_available">no data available</string>
    <string name="warning_lens_not_registered">No lenses registered</string>
    <string name="warning_cam_not_registered">No cameras registered</string>
    <string name="warning_filmroll_not_registered">No film rolls registered</string>
    <string name="warning_accessory_not_registered">No accessories registered</string>
    <string name="warning_photo_not_registered">No photos</string>
    <string name="warning_newversion">
        Trisquel has been updated. Read the release notes for details.
    </string>
    <string name="msg_reset_autocomplete">Are you sure to reset autocomplete history?</string>
    <string name="msg_reset_autocomplete_done">Autocomplete history reset.</string>
    <string name="msg_save_or_discard_data">Save changes before closing?</string>
    <string name="msg_continue_editing_or_discard_data">Continue editing or discard unsaved changes?</string>
    <string name="pref_title_autocomplete_from_previous_shot">Copy lens from the previous shot</string>
    <string name="pref_description_autocomplete_from_previous_shot">
        Copy the lens from the previous shot when creating a new photo
    </string>
    <string name="pref_title_reset_autocomplete_history">Reset autocomplete history</string>
    <string name="pref_description_reset_autocomplete_history">
        Clear autocomplete history of film brands and camera, lens, and film manufacturers and camera mounts.
        Default candidates remains.
    </string>
</resources>