<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.tnose.app.trisquel.MainActivity">
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="99"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_release_notes"
        android:orderInCategory="101"
        android:title="@string/action_releasenotes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup_sqlite"
        android:orderInCategory="101"
        android:title="@string/action_backup_sqlite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_license"
        android:orderInCategory="101"
        android:title="@string/action_license"
        app:showAsAction="never" />
</menu>
