<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="net.tnose.app.trisquel.EditCameraActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <net.tnose.app.trisquel.ImmediateAutoCompleteTextView
                    android:id="@+id/edit_mount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/label_mount"
                    app:met_floatingLabel="normal" />

                <net.tnose.app.trisquel.ImmediateAutoCompleteTextView
                    android:id="@+id/edit_manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/label_manufacturer"
                    app:met_floatingLabel="normal" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/label_model"
                    app:met_floatingLabel="normal" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinner_format"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/label_format"
                    app:met_floatingLabel="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_shutter_speed_step"
                    android:textAlignment="viewStart" />

                <RadioGroup
                    android:id="@+id/radiogroup_ss_stop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checkedButton="@+id/radio_stop_one"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp">

                    <RadioButton
                        android:id="@+id/radio_stop_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_shutter_speed_step_one" />

                    <RadioButton
                        android:id="@+id/radio_stop_half"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_shutter_speed_step_half" />

                    <RadioButton
                        android:id="@+id/radio_stop_one_third"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_shutter_speed_step_one_third" />

                    <RadioButton
                        android:id="@+id/radio_stop_custom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_shutter_speed_step_custom" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_shutter_speed_range"
                    android:textAlignment="viewStart" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/spinner_slowest_ss"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/label_shutter_speed_slowest" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/label_to" />

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/spinner_fastest_ss"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/label_shutter_speed_fastest" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <CheckBox
                    android:id="@+id/check_bulb_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_bulb" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_exposure_compensation"
                android:textAlignment="textEnd" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_step" />

                    <Spinner
                        android:id="@+id/spinner_ev_grain_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/ev_grain_size_list" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_range" />

                    <Spinner
                        android:id="@+id/spinner_ev_width"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/ev_width_list" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/layout_flc"
                android:visibility="gone">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_lens_name_flc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/label_lens_name"
                    app:met_floatingLabel="normal" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_focal_length_flc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/label_focal_length"
                    app:met_floatingLabel="normal" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_f_stops"
                    android:textAlignment="viewStart" />

                <net.tnose.app.trisquel.GrowingGridView
                    android:id="@+id/gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="8dp"
                    android:numColumns="auto_fit"
                    android:columnWidth="60dp"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="0dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
