<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="autocomplete_from_previous_shot"
        android:title="@string/pref_title_autocomplete_from_previous_shot"
        android:summary="@string/pref_description_autocomplete_from_previous_shot" />
    <Preference
        android:key="reset_autocomplete"
        android:title="@string/pref_title_reset_autocomplete_history"
        android:summary="@string/pref_description_reset_autocomplete_history"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
    -->
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
    <MultiSelectListPreference
        android:defaultValue="@array/pref_example_list_values"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/film_iso"
        android:key="multi_select_list_preference_1"
        android:title="Multi select list preference" />-->

</PreferenceScreen>
