<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="net.tnose.app.trisquel.EditFilmRollActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_name"
            android:singleLine="true"
            app:met_floatingLabel="normal" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_camera"
            app:met_floatingLabel="normal" />

        <net.tnose.app.trisquel.ImmediateAutoCompleteTextView
            android:id="@+id/edit_manufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_manufacturer"
            app:met_floatingLabel="normal" />

        <net.tnose.app.trisquel.ImmediateAutoCompleteTextView
            android:id="@+id/edit_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_brand"
            android:inputType="textPersonName"
            app:met_floatingLabel="normal" />

        <net.tnose.app.trisquel.ImmediateAutoCompleteTextView
            android:id="@+id/edit_iso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_iso"
            android:inputType="number"
            app:met_floatingLabel="normal" />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
